--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 
-title: Hi! I'm Della.
-description: [A short description of your site's purpose]
+title: Hi!
+# description:  We are working on this. See you very soon!
