--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 
 title: Hi!
-# description:  We are working on this. See you very soon!
+description:  We are working on this. See you very soon!
