--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-cayman
 
-title: Hi!
-description:  We are working on this. See you very soon!
+title: Hi! I'm Della
+description: Thank you for visiting here.
+# description:  We are working on this. See you very soon!
